--- a/src/pages/ShowAlocate.css
+++ b/src/pages/ShowAlocate.css
@@ -354,6 +354,43 @@ transform: scale(0.9);
     right: 30vw;
   }}
 
+  .Data-Other-3{
+    margin-left : 19vw;
+    text-align: left;
+    overflow: scroll;
+    width: 80%;
+    height: 2.4vw;
+  }
+  .front-inside-1{
+    margin-top: 0;
+    padding: 0;
+    margin-left: 11vw;
+  }
+  .line-on-top{
+    margin-top: 2vw;
+  }
+
+#p-1{
+  margin-right: 0px;
+  padding-right: 0px;
+  
+  margin-left: 5vw;
+}
+#p-4{
+  margin-right: .4vw;
+}
+.areaofIndex{
+  padding-right: 2vw;
+  padding: 0;
+  font-size: 15px;
+  margin: 0;
+  position: relative;
+  margin-right: 0vw;
+  right: 4vw;
+}
+.area-p1{
+  display: flex;
+}
 @media only screen and (min-width :1451px) {
   .btn-inline-1 , .btn-inline-2 , .btn-inline-3{
     font-size: 14.5px;
